Feat: Product list view updated >> filters and pagination added

--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -58,12 +58,12 @@
                                         <a href="/">Home</a>
                                     </li>
                                     <li class="mega" id="hover-cls">
-                                        <a href="{% url 'website:comic' %}">Comics
+                                        <a href="{% url 'website:shop' %}?category=comics">Comics
                                             <div class="lable-nav">new</div>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="{% url 'website:novel' %}">Novels</a>
+                                        <a href="{% url 'website:shop' %}?category=novel">Novels</a>
                                     </li>
                                     <li>
                                         <a href="{% url 'website:stories' %}">Stories</a>
