--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -66,7 +66,7 @@
                                         <a href="{% url 'website:shop' %}?category=novel">Novels</a>
                                     </li>
                                     <li>
-                                        <a href="{% url 'website:stories' %}">Stories</a>
+                                        <a href="{% url 'website:posts' %}">Stories</a>
                                     </li>
                                     <li>
                                         <a href="{% url 'website:about_us' %}">About Us</a>
