FEAT: user management added with links configured and dashboard blank

--- a/src/administration/admins/templates/admins/user_list.html
+++ b/src/administration/admins/templates/admins/user_list.html
@@ -186,7 +186,7 @@
         $(document).ready(function () {
 
             $("#id_is_active option:first").text("-- Is Active --");
-            $("#id_is_employee option:first").text("-- Is Employee --");
+            $("#id_is_client option:first").text("-- Is Client --");
 
             $('label').hide();
             $('input').addClass('form-control');
