--- a/src/administration/admins/templates/admins/include/header.html
+++ b/src/administration/admins/templates/admins/include/header.html
@@ -8,8 +8,8 @@
         </button>
         <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
             <a href="{% url 'account_login' %}">
-                <img src="{% static 'required/images/logo-staff-dark.png' %}" width="110"
-                     height="32" alt="Tabler"
+                <img src="https://picsum.photos/50/50" width="110"
+                     height="32" alt="Monogatari"
                      class="navbar-brand-image">
             </a>
         </h1>
@@ -59,7 +59,7 @@
                                 </span>
                     {% else %}
                         <span class="avatar avatar-sm"
-                              style="background-image: url({% static 'core/no-user.png' %})">
+                              style="background-image: url('https://picsum.photos/50/50')">
                                 </span>
                     {% endif %}
 
