--- a/src/accounts/templates/accounts/address_form.html
+++ b/src/accounts/templates/accounts/address_form.html
@@ -10,14 +10,14 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="page-title">
-                        <h2>Profile Update</h2>
+                        <h2>Address Update</h2>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <nav aria-label="breadcrumb" class="theme-breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Profile update</li>
+                            <li class="breadcrumb-item active" aria-current="page">Address update</li>
                         </ol>
                     </nav>
                 </div>
@@ -34,16 +34,6 @@
 
             <div class="card">
                 <div class="card-body">
-
-                    <div class="mb-2 text-center">
-                        {% if form.instance.profile_image %}
-                            <img src="{{ form.instance.profile_image.url }}" style='height: 150px;width: 150px;' class="rounded-circle">
-                        {% else %}
-                            <img src="{% static 'admin/images/base/no-user.png' %}" style='height: 150px;width: 150px;' class="rounded-circle">
-                        {% endif %}
-                    </div>
-                    <hr>
-
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form|crispy }}
