--- a/src/administration/client/templates/client/include/dashboard_navbar.html
+++ b/src/administration/client/templates/client/include/dashboard_navbar.html
@@ -1,21 +1,26 @@
+{% load static %}
 <div class="dashboard-sidebar">
-                        <div class="profile-top">
-                            <div class="profile-image">
-                                <img src="../assets/images/avtar.jpg" alt="" class="img-fluid">
-                            </div>
-                            <div class="profile-detail">
-                                <h5>Mark Jecno</h5>
-                                <h6>mark.jecno@mail.com</h6>
-                            </div>
-                        </div>
-                        <div class="faq-tab">
-                            <ul class="nav nav-tabs" id="top-tab" role="tablist">
-                                <li class="nav-item"><a data-bs-toggle="tab" data-bs-target="#info" class="nav-link active">Dashboard</a></li>
-                                <li class="nav-item"><a data-bs-toggle="tab" data-bs-target="#address" class="nav-link">My Orders</a></li>
-                                <li class="nav-item"><a data-bs-toggle="tab" data-bs-target="#address" class="nav-link">My Wishlist</a></li>
-                                <li class="nav-item"><a data-bs-toggle="tab" data-bs-target="#address" class="nav-link">My Cart</a></li>
-                                <li class="nav-item"><a data-bs-toggle="tab" data-bs-target="#address" class="nav-link">Payments</a></li>
-                                <li class="nav-item"><a href="" class="nav-link">Log Out</a> </li>
-                            </ul>
-                        </div>
-                    </div>
+    <div class="profile-top">
+        <div class="profile-image">
+            {% if not request.user.profile_image %}
+            <img alt="Profile Picture" class="img-fluid" src="{% static 'website/images/avtar.jpg' %}">
+            {% else %}
+                        <img alt="Profile Picture" class="img-fluid" src="{{request.user.profile_image.url}}">
+            {% endif %}
+        </div>
+        <div class="profile-detail">
+            <h5>{{request.user.name_or_username}}</h5>
+            <h6>{{request.user.email}}</h6>
+        </div>
+    </div>
+    <div class="faq-tab">
+        <ul class="nav nav-tabs" id="top-tab" role="tablist">
+            <li class="nav-item"><a class="nav-link active" href="{% url 'client:dashboard' %}">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link">My Orders</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'client:wishlist' %}">My Wishlist</a></li>
+            <li class="nav-item"><a class="nav-link">My Cart</a></li>
+            <li class="nav-item"><a class="nav-link">Payments</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Log Out</a></li>
+        </ul>
+    </div>
+</div>
