FEAT: order list added.

--- a/src/administration/admins/templates/admins/user_list.html
+++ b/src/administration/admins/templates/admins/user_list.html
@@ -27,6 +27,9 @@
                                 <button class="btn btn-primary" type="submit">
                                     <i class="fa fa-search"></i> Search
                                 </button>
+                                <a href="{% url 'admins:user-list' %}" class="btn btn-danger">
+                                    <i class="fa fa-paint-brush"></i>&nbsp;Clear
+                                </a>
                             </div>
                         </div>
                     </form>
