--- a/src/administration/admins/templates/admins/order_detail.html
+++ b/src/administration/admins/templates/admins/order_detail.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'admins/base.html' %}
+{% load static %}
+{% load custom_tags %}
 
-</body>
-</html>
+{% block base_subtitle %} Orders Details{% endblock %}
+{% block base_subhead_heading %} Order &rAarr; Detail{% endblock %}
+{% block base_subhead_paragraph %}Order detailed down description{% endblock %}
+
+
+{% block base_subhead_button %}
+
+{% endblock %}
+
+{% block base_content %}
+
+
+{% endblock %}
