FEAT: all links and broken images are fixed + admin profile and password change page added

--- a/src/administration/admins/templates/admins/base.html
+++ b/src/administration/admins/templates/admins/base.html
@@ -13,7 +13,8 @@
     </title>
 
     {# GLOBAL CSS #}
-    <link rel="shortcut icon" href="{% static 'required/images/logo-staff-dark-100.png' %}">
+<link rel="icon" href="{% static 'website/logos/logo-light.png' %}" type="image/x-icon"/>
+    <link rel="shortcut icon" href="{% static 'website/logos/logo-light.png' %}" type="image/x-icon"/>
     <link href="{% static 'admin/css/tabler.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/tabler-flags.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/tabler-payments.min.css' %}?1668287865" rel="stylesheet"/>
