--- a/src/administration/admins/templates/admins/my-profile-change.html
+++ b/src/administration/admins/templates/admins/my-profile-change.html
@@ -1,10 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'admins/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %} Profile Update {% endblock %}
+{% block base_subtitle %}Profile Update{% endblock %}
+{% block base_subhead_heading %}My &rAarr; Profile Update {% endblock %}
+{% block base_subhead_paragraph %}Update your profile information here.{% endblock %}
+{% block base_subhead_button %}
+    <a href="{% url 'admins:dashboard' %}">&larr; Dashboard</a>
+{% endblock %}
 
-{% block content %}
+{% block base_content %}
 
     <div class="row justify-content-center">
         <div class="col-md-8">
@@ -15,7 +20,7 @@
                         {% if form.instance.profile_image %}
                             <img src="{{ form.instance.profile_image.url }}" style='height: 150px;width: 150px;' class="rounded-circle">
                         {% else %}
-                            <img src="{% static 'admin/images/base/no-user.png' %}" style='height: 150px;width: 150px;' class="rounded-circle">
+                            <img src="{% static 'required/images/no-user.png' %}" style='height: 150px;width: 150px;' class="rounded-circle">
                         {% endif %}
                     </div>
                     <hr>
